fix package.json pack script

--- a/player/package.json
+++ b/player/package.json
@@ -7,7 +7,7 @@
 	"license": "GNU GPLv3",
 	"scripts": {
 		"start": "electron src/",
-		"pack": "electron-packager build youtube-pip -app-version=1.0 --icon=src/icon.ico"
+		"pack": "electron-packager . youtube-pip -app-version=1.0 --icon=src/icon.ico"
 	},
 	"dependencies": {
 		"electron": "^1.7.5",
